--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
-    "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "typescript": "3.3.3333"
   },
@@ -33,7 +32,9 @@
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
+    "@types/react-redux": "^7.0.1",
     "gh-pages": "^2.0.1",
+    "react-scripts": "^2.1.5",
     "redux-devtools": "^3.5.0"
   }
 }
