--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
+    "reselect": "^4.0.0",
+    "typesafe-actions": "^3.1.0",
     "typescript": "3.3.3333"
   },
   "scripts": {
@@ -35,6 +37,7 @@
     "@types/react-redux": "^7.0.1",
     "gh-pages": "^2.0.1",
     "react-scripts": "^2.1.5",
-    "redux-devtools": "^3.5.0"
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
