--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://onmar.github.io/mmo-simulator",
   "private": true,
   "dependencies": {
+    "@tippy.js/react": "^2.1.1",
     "cuid": "^2.1.6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
